--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7130</title>
-    <link rel = "stylesheet" href = "css.css">
-    <link rel="icon" href="下載.png" type="image">
-    <script src="script.js"></script>
+    <meta name="keywords" content="FRC">
+    <meta name="description" content="">
+    <meta name="og:description" content="">
+    <title>FRC 7130</title>
+    <link rel = "stylesheet" href = "style.css">
+    <link rel="icon" href="7130.png" type="image">
+    <script src="Js.js"></script>
+    <link rel="icon" type="image/x-icon" href="7130.png">
 </head>
 <body>
+    <textarea id="textArea">Frc7130@gmail.com</textarea>
     <section class="Put">
         <div class="img">
-            <img src="frc7130_logo.jpg" width="200">
+            <img src="7130.png" width="200">
         </div>
     </section>
     <section class="header">
         <div class="share">
-            <button class="btn" type="button" onclick="Ins()">Inst</button>
-            <button class="btn" type="button" onclick="FB()">FB</button>
-            <button class="btn" type="button" onclick="YT()">Youtube</button>
+            <button class="btn" type="button" onclick="Ins()">INSTAGRAM</button>
+            <button class="btn" type="button" onclick="FB()">FACEBOOK</button>
+            <button class="btn" type="button" onclick="YT()">YOUTUBE</button>
+            <button class="btn" onclick="copyToClipBoard()">GMAIL</button>
+
         </div>
     </section>
-    <footer class="footer">
-        <p>Mail : Frc7130@gmail.com</p>
-    </footer>
+
 </body>
 </html>
